--- a/web-app/style.css
+++ b/web-app/style.css
@@ -10,20 +10,24 @@ article {
   margin: 1em auto;
 }
 
-ul { /* remove bullets from selection list */
+#TOC { /* remove bullets from selection list */
   list-style-type: none;
+  padding: 0 0 0 0; /* nicely align the TOC with on this page box */
 }
-ul a{
+#TOC a{
   text-decoration: none;
 }
 
+
+
 .table-of-contents {
   float: right;
-  width: 40%;
+  width: 35%;
   background: #eee;
   font-size: 0.8em;
-  padding: 1em 2em;
-  margin: 0 0 0.5em 0em;
+  padding-left: 1em;
+  margin-left: 10%;
+
 }
 
 .table-of-contents ul {
@@ -32,7 +36,7 @@ ul a{
 
 }
 .table-of-contents li {
-  margin: 0 0 0.25em 0;
+  margin: 0 0 1.7em 0;
 }
 .table-of-contents a {
   text-decoration: none;
@@ -65,4 +69,12 @@ h3:target {
 #team{
   text-align: center;
   font-size: 1.2em;
+}
+
+.liHovered {
+  color: green;
+}
+
+.liHovered2{
+  color: yellow;
 }
