--- a/web-app/style.css
+++ b/web-app/style.css
@@ -1,6 +1,7 @@
 body {
   background: #eee;
   padding: 20px;
+  font-family: 'Roboto', sans-serif;
 }
 
 article {
@@ -27,6 +28,8 @@ article {
   font-size: 0.8em;
   padding-left: 1em;
   margin-left: 10%;
+  border: 3px solid #eee;
+  border-radius: 10px;
 
 }
 
@@ -76,5 +79,5 @@ h3:target {
 }
 
 .liHovered2{
-  color: yellow;
+  color: rebeccapurple;
 }
